--- a/backend/package.json
+++ b/backend/package.json
@@ -18,15 +18,24 @@
   "license": "ISC",
   "dependencies": {
     "@mistralai/mistralai": "^0.0.10",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "express-validator": "^7.2.1",
     "gsap": "^3.12.7",
     "helmet": "^6.0.1",
     "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.3",
     "openai": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
