--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "helmet": "^6.0.1",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.484.0",
     "mongoose": "^7.0.3",
     "openai": "^4.0.0",
     "passport": "^0.7.0",
@@ -36,6 +37,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
