--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,15 +12,15 @@ services:
       - PORT=3001
       - MONGODB_URI=mongodb://mongodb:27017/villa-petriolo
       - REDIS_URL=redis://redis:6379
-      - FRONTEND_URL=http://localhost:3000
+      - FRONTEND_URL=http://frontend
+      - CORS_WHITELIST=http://localhost:3000,http://127.0.0.1:3000,http://localhost
       - MISTRAL_API_KEY=2ru1mNQglqLYfde6bnRXEMVt6EX9NEmL
-      - OPENAI_API_KEY=your-openai-api-key-here
     depends_on:
       - mongodb
       - redis
     volumes:
       - ./backend:/app
-      - /app/node_modules
+      - node_modules:/app/node_modules
 
   frontend:
     image: nginx:alpine
@@ -54,3 +54,4 @@ services:
 volumes:
   mongodb_data:
   redis_data:
+  node_modules:
